// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon checkmark renders correctly 1`] = `
<span
  className="checkmark"
>
  <span>
    checkmark
  </span>
</span>
`;

exports[`Icon dot renders correctly 1`] = `
<span
  className="dot"
>
  <span>
    dot
  </span>
</span>
`;

exports[`Icon tooltip renders correctly 1`] = `
<span
  className="tooltip"
>
  <span>
    tooltip
  </span>
</span>
`;
